tests/baselines/reference/newNamesInGlobalAugmentations1.errors.txt
tests/cases/compiler/f1.d.ts(11,9): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/compiler/f1.d.ts(12,5): error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.


==== tests/cases/compiler/f1.d.ts (2 errors) ====
    export {};
    
    declare module M.M1 {
        export let x: number;
    }
    declare global {
        interface SymbolConstructor {
            observable: symbol;
        }
        class Cls {x}
        let [a, b]: number[];
            ~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        export import X = M.M1.x;
        ~~~~~~
!!! error TS2667: Imports are not permitted in module augmentations. Consider moving them to the enclosing external module.
    }
    
==== tests/cases/compiler/main.ts (0 errors) ====
    Symbol.observable;
    new Cls().x
    let c = a + b + X;